Api Get all Events.
