# src/routes/event-routes.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const eventController = require ('../controllers/event-controller');
+const router = express.Router();
+
+router.get("/getEvents", eventController.getEvents);
+
+module.exports = router;
